--- a/Python_Basics_II.ipynb
+++ b/Python_Basics_II.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMthfYxlf+iB8fLwJH04JNS",
+      "authorship_tag": "ABX9TyPhB4FJTFr7GaIMRDe13nX9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,9 @@
         "\n",
         "# *INSY 4054: Emerging Technologies*\n",
         "\n",
-        "# **Week 2-1:** Python Basics II\n",
+        "# **Python Basics II**\n",
+        "\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
@@ -499,9 +501,9 @@
         "x = 5\n",
         "\n",
         "if x > 10:\n",
-        "  print(\"The value of x is larger than 10.\")\n",
+        "  print(\"The value of x is greater than 10.\")\n",
         "elif x > 5:\n",
-        "  print(\"The value of x is larger than 5.\")\n",
+        "  print(\"The value of x is greater than 5.\")\n",
         "else:\n",
         "  print(\"The value of x is less than or equal to 5.\")"
       ],
