--- a/Python_Basics_I.ipynb
+++ b/Python_Basics_I.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhvPeEyFvaw7i65vQryqLS",
+      "authorship_tag": "ABX9TyPPXfLXtODR4OBMQFniXCli",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,9 @@
         "\n",
         "# *INSY 4054: Emerging Technologies*\n",
         "\n",
-        "# **Week 1-2:** Python Basics I\n",
+        "# **Python Basics I**\n",
+        "\n",
+        "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
         "---"
       ]
