--- a/Blockchain.ipynb
+++ b/Blockchain.ipynb
@@ -6,7 +6,7 @@
       "name": "Blockchain",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3wIWKtJ9WSalb2wCLPb/0",
+      "authorship_tag": "ABX9TyNcZQe+MksiOcJjSLYEtW4J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,13 +42,7 @@
         "\n",
         "Instructor: Dr. Kambiz Saffarizadeh\n",
         "\n",
-        "---\n",
-        "\n",
-        "Credit:\n",
-        "\n",
-        "https://www.youtube.com/watch?v=pYasYyjByKI\n",
-        "\n",
-        "https://www.youtube.com/watch?v=ZhnJ1bkIWWk"
+        "---\n"
       ]
     },
     {
@@ -68,7 +62,7 @@
       "source": [
         "from hashlib import sha256"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +77,7 @@
         "    self.block_data = '-'.join(transaction_list) + '-' + str(block_number) + '-' + previous_block_hash + '-' + str(nonce)\n",
         "    self.block_hash = sha256(self.block_data.encode()).hexdigest()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +102,7 @@
         "t5 = \"Anatjari sends 0.2 MC to Samira\"\n",
         "t6 = \"Zachery sends 2.6 MC to Kate\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +122,7 @@
       "source": [
         "initial_block = MarquetteCoinBlock(\"Initial hash string\", 1, 0, [t1, t2])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +138,7 @@
         "print(\"Block data: \", initial_block.block_data)\n",
         "print(\"Block hash: \", initial_block.block_hash)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +170,7 @@
         "t1 = \"Samira sends 2 MC to Nadia\"\n",
         "t2 = \"Anatjari sends 1.3 MC to Zachery\""
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +187,7 @@
         "print(\"Block data: \", initial_block.block_data)\n",
         "print(\"Block hash: \", initial_block.block_hash)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +230,7 @@
         "t5 = \"Anatjari sends 0.2 MC to Samira\"\n",
         "t6 = \"Zachery sends 2.6 MC to Kate\""
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,7 +247,7 @@
         "print(\"Block data: \", initial_block.block_data)\n",
         "print(\"Block hash: \", initial_block.block_hash)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +273,7 @@
         "print(\"Block data: \", second_block.block_data)\n",
         "print(\"Block hash: \", second_block.block_hash)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +299,7 @@
         "print(\"Block data: \", third_block.block_data)\n",
         "print(\"Block hash: \", third_block.block_hash)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +333,7 @@
         "t5 = \"Anatjari sends 0.2 MC to Samira\"\n",
         "t6 = \"Zachery sends 2.6 MC to Kate\""
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +358,7 @@
         "print(\"Block data: \", third_block.block_data)\n",
         "print(\"Block hash: \", third_block.block_hash)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +404,7 @@
         "\n",
         "The only way to find the text from the hash is to apply the hashing function on random inputs until one of them happen to be the original text that was hashed.\n",
         "\n",
-        "The process of guessing the original text is called mining. You help the blockchain work by finding the original text and confirming that it is in fact in line with the previous block. In the cryptocurrency world the first individual who cofirms a block is rewarded with a number of coins!"
+        "Since everyone has the transactions and the previous block, people start guessing the nonce until the generate a hash with a specific number of zeros in the right-hand-side. The process of guessing the nonce is called mining. Because it is a very expensive task to find the nonce (time and energy consuming), we assume that people will focus on finding the nonce for the blocks that have the most accurate and trustworthy details. In the cryptocurrency world the first individual who finds the nonce is rewarded with a number of coins!"
       ]
     },
     {
@@ -419,9 +413,9 @@
         "id": "HQ5Awb8jPZj8"
       },
       "source": [
-        "Guessing a SHA256 hash code, which is 64 hexadecimal numbers, is almost impossible. So, most blockchains start with a smaller version of it by assuming that the first n characters are 0s. The goal with n number of prefix is to guess a number to add to the text that creates a hash code that starts with n zeros. An example makes this idea easier to understand.\n",
+        "### Nonce\n",
         "\n",
-        "Note that every miner must uncover the same solution in order for the transaction to be valid.\n",
+        "Guessing a SHA256 hash code, which is 64 hexadecimal numbers, is almost impossible. So, as discussed in most blockchains we focus on finding a specific number that is used as a part of the block. The goal is to find the number that can make the hash code start n zeros. For example: 004e409bd8ea9...\n",
         "\n",
         "To learn more watch both of the following videos:\n",
         "\n",
@@ -446,7 +440,7 @@
         "      return nonce\n",
         "    nonce = nonce + 1"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +456,7 @@
         "# Mining the initial block\n",
         "initial_block_nonce = mine(\"Initial hash string\", 1, 2, [t1, t2])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +479,7 @@
       "source": [
         "initial_block_nonce"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +503,7 @@
       "source": [
         "initial_block = MarquetteCoinBlock(\"Initial hash string\", 1, initial_block_nonce, [t1, t2])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -525,7 +519,7 @@
       "source": [
         "initial_block.block_data"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +551,7 @@
       "source": [
         "initial_block.block_hash"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +587,7 @@
         "print(\"Block data: \", second_block.block_data)\n",
         "print(\"Block hash: \", second_block.block_hash)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,7 +618,7 @@
         "print(\"Block data: \", third_block.block_data)\n",
         "print(\"Block hash: \", third_block.block_hash)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,6 +631,30 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NxX4JA4Dlyeh"
+      },
+      "source": [
+        "For more details| watch:\n",
+        "\n",
+        "https://www.youtube.com/watch?v=ZhnJ1bkIWWk\n",
+        "\n",
+        "https://www.youtube.com/watch?v=pYasYyjByKI"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iAeXuhS3l65g"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
