--- a/Blockchain.ipynb
+++ b/Blockchain.ipynb
@@ -6,7 +6,7 @@
       "name": "Blockchain",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcZQe+MksiOcJjSLYEtW4J",
+      "authorship_tag": "ABX9TyMzUpmrjIixT5fXG7cXJY10",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -415,7 +415,7 @@
       "source": [
         "### Nonce\n",
         "\n",
-        "Guessing a SHA256 hash code, which is 64 hexadecimal numbers, is almost impossible. So, as discussed in most blockchains we focus on finding a specific number that is used as a part of the block. The goal is to find the number that can make the hash code start n zeros. For example: 004e409bd8ea9...\n",
+        "Guessing a SHA256 hash code, which is 64 hexadecimal numbers, is almost impossible. So, as discussed in most blockchains we focus on finding a specific number that is used as a part of the block. The goal is to find the number that can make the hash code start with n zeros. For example: 004e409bd8ea9...\n",
         "\n",
         "To learn more watch both of the following videos:\n",
         "\n",
