--- a/Fish_Example.ipynb
+++ b/Fish_Example.ipynb
@@ -6,7 +6,7 @@
       "name": "Fish Example",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOJ+Lbm3kCdgBogaBw32GIQ",
+      "authorship_tag": "ABX9TyOfmhMyTAsebub1aRU6YVXD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Fish_Example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tuAbjmWrrany"
+      },
+      "source": [
+        "Credit: https://www.tensorflow.org/tutorials/images/classification"
       ]
     },
     {
@@ -52,7 +61,7 @@
       "source": [
         "import tensorflow as tf"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +75,7 @@
         "img_width = 125 #Scaling down due to limited computing resources\n",
         "data_dir = 'train'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +96,7 @@
         "  image_size=(img_height, img_width),\n",
         "  batch_size=batch_size)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +126,7 @@
         "  image_size=(img_height, img_width),\n",
         "  batch_size=batch_size)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +151,7 @@
         "class_names = train_ds.class_names\n",
         "print(class_names)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +173,7 @@
         "train_ds = train_ds.cache().shuffle(1000).prefetch(buffer_size=AUTOTUNE)\n",
         "val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +197,7 @@
         "  tf.keras.layers.Dense(num_classes)\n",
         "])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +210,7 @@
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,7 +225,7 @@
       "source": [
         "history = model.fit(train_ds, epochs=10)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +267,7 @@
       "source": [
         "model.evaluate(val_ds, verbose=2)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +293,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BC28Z10KnlRc"
+        "id": "1hOeSmiArc4Y"
       },
       "source": [
         ""
