--- a/Python_Basics_III.ipynb
+++ b/Python_Basics_III.ipynb
@@ -20,7 +20,7 @@
       "version": "3.8.5"
     },
     "colab": {
-      "name": "Python Basics III",
+      "name": "Python Basics III.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
@@ -445,7 +445,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
       "source": [
         "df2 = pd.read_csv('http://saffarizadeh.com/ET/purchases.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -819,7 +819,7 @@
         "id": "u3J9tyOOLJV7"
       },
       "source": [
-        "# Let's work with some real data!"
+        "# Let's work with some real data! [Warm up for Module 3]"
       ]
     },
     {
