--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "AI Project.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNuWw7R/U4AmOEfcGHfzZef",
+      "authorship_tag": "ABX9TyNVfWcxSyLCAA+cQuRhyimL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -385,7 +385,7 @@
       },
       "source": [
         "encoder_two = tf.keras.Sequential([\n",
-        "  tf.keras.layers.Flatten(), # or: tf.keras.layers.Reshape((784,)),\n",
+        "  tf.keras.layers.Flatten(), # or: tf.keras.layers.Reshape((784,)), # or: tf.keras.layers.Reshape((-1,)),\n",
         "  tf.keras.layers.Dense(64, activation='relu')\n",
         "])"
       ],
