--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -3,11 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Working with Spreadsheets",
+      "name": "Working with Spreadsheets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPb5Nvd4DYwS543Le83cni9",
+      "authorship_tag": "ABX9TyOOaDiGmnu9A8DZq/6nasp8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3121,6 +3121,102 @@
           "execution_count": 45
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zSiD0x77OpKI"
+      },
+      "source": [
+        "## An Important Note on Reference Variables"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UCJYyJOXOwIN"
+      },
+      "source": [
+        "The variables used to \"store\" pandas dataframes do not actually store the dataframes, they just refer to the location of the dataframes. This means that if you want to copy the dataframe to another variable, you have to deepcopy it."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wl0ayFM0Ooav"
+      },
+      "source": [
+        "x = students_sheet1\n",
+        "x"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5DPv1AHzPPh1"
+      },
+      "source": [
+        "students_sheet1.iloc[0,0] = \"Emily\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NrB6O0cNPXEE"
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0DprNS6hPY8T"
+      },
+      "source": [
+        "As you can see, if you make any changes to `students_sheet1` dataframe, the `x` dataframe is also influence. This is because both `students_sheet1` and `x` refer to the same dataframe.\n",
+        "\n",
+        "If you need to have a copy of `students_sheet1`, you need to use the `.copy()` method."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zrw_Zg_1Prho"
+      },
+      "source": [
+        "y = students_sheet1.copy()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "re46RSJRPuvR"
+      },
+      "source": [
+        "students_sheet1.iloc[0,0] = \"Daniel\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s2nwhk7RP0wW"
+      },
+      "source": [
+        "y"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
