--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFI9ROgfVy4mi55ad4wIKi",
+      "authorship_tag": "ABX9TyPSbmyl6BgSVTZztd2LDGcp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         "import requests\n",
         "from bs4 import BeautifulSoup"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
         "url = 'https://www.marquette.edu/'\n",
         "response = requests.get(url)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
       "source": [
         "soup = BeautifulSoup(response.content, 'lxml')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
         "for link in all_links:\n",
         "  link_labels.append(link.text)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "for link in all_links:\n",
         "  link_urls.append(link.get('href'))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
       "source": [
         "label_url_pairs = list(zip(link_labels, link_urls))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,13 +217,14 @@
         "id": "dImaJmmykgO9"
       },
       "source": [
+        "# Cleaning based on whether the url starts with 'http'\n",
         "cleaned_label_url_pairs = []\n",
         "\n",
         "for label, url in label_url_pairs:\n",
         "    if url[:4] == \"http\":\n",
         "        cleaned_label_url_pairs.append((label, url))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,6 +234,32 @@
       },
       "source": [
         "cleaned_label_url_pairs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4vpE7gj4bR7w"
+      },
+      "source": [
+        "# Cleaning based on adding the proper https:// to the URLs without http\n",
+        "\n",
+        "BASE_URL = \"https://www.marquette.edu\"\n",
+        "\n",
+        "cleaned_label_url_pairs2 = [requests.compat.urljoin(BASE_URL, url) for url in link_urls]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rsctiINSbjne"
+      },
+      "source": [
+        "cleaned_label_url_pairs2"
       ],
       "execution_count": null,
       "outputs": []
@@ -280,7 +307,7 @@
         "\n",
         "fixed_image_urls = [requests.compat.urljoin(BASE_URL, image_url) for image_url in image_urls]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +351,7 @@
       "source": [
         "image_alt_pairs = list(zip(fixed_image_urls, image_alts))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +362,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +403,7 @@
       "source": [
         "import os"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,7 +415,7 @@
         "directory = \"images\"\n",
         "os.makedirs(directory, exist_ok=True) # With exist_ok=True, we will not get an error if the directory already exists"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,7 +446,7 @@
         "      f.write(image_response.content)\n",
         "  image_counter = image_counter + 1"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +470,7 @@
         "import tensorflow_hub as hub\n",
         "import numpy as np"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -480,7 +507,7 @@
         "      image_names.append(filename)\n",
         "image_arrays = np.array(images_list)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -495,7 +522,7 @@
       "source": [
         "image_arrays.shape"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +557,7 @@
         "])\n",
         "inception_model.build([None, 299, 299, 3])  # Batch input shape."
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,7 +577,7 @@
       "source": [
         "output = inception_model(image_arrays)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +601,7 @@
       "source": [
         "output.shape"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,7 +635,7 @@
         "classes_text = classes_response.text\n",
         "classes = classes_text.split('\\n')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +655,7 @@
       "source": [
         "num = 14"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +672,7 @@
         "# Show an image from the image_arrays\n",
         "tf.keras.preprocessing.image.array_to_img(image_arrays[num])"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +716,7 @@
         "top_labels = [(classes[index], round(result[index].numpy()*100, 2)) for index in list(np.argsort(-1*result))]\n",
         "print(top_labels[:5])"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +752,7 @@
         "  labels.append(label)\n",
         "  confidences.append(confidence)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -751,7 +778,7 @@
         "df_final = pd.DataFrame({\"image\": image_names, \"label\": labels, \"confidence\": confidences})\n",
         "df_final"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1041,7 @@
       "source": [
         "df_final.to_excel(\"classified_images.xlsx\")"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
