--- a/Automation_Project_Student_Version.ipynb
+++ b/Automation_Project_Student_Version.ipynb
@@ -6,7 +6,7 @@
       "name": "Automation Project - Student Version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMvE5zSH0yP24RuvMC7kpxJ",
+      "authorship_tag": "ABX9TyO97DKlO8UIbWu2XZLOLGVj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,7 @@
         "\n",
         "Note: use `attrs` to find all relevant elements for each step.\n",
         "\n",
-        "Note: to figure out which attribute(s) and attribute values you need to use, open http://saffarizadeh.com/ET/reviews.html in Chrome or FireFox, right click on the element you want to extract, and select `Inspect` or `Inspect Element`. This way you can see the HTML code for this specific element. Using slides #7 and #8 of Week 8-1, you should be able to identify the attribute name and attribute values needed."
+        "Note: to figure out which attribute(s) and attribute values you need to use, open https://saffarizadeh.com/ET/reviews.html in Chrome or FireFox, right click on the element you want to extract, and select `Inspect` or `Inspect Element`. This way you can see the HTML code for this specific element. Using slides #14, #15, and #16 of Week 7-1, you should be able to identify the attribute name and attribute values needed."
       ]
     },
     {
@@ -198,7 +198,7 @@
         "\n",
         "Note: For this step you have two ways to extract the ratings. Both ways are fine but using the `rating` attribute is easier.\n",
         "\n",
-        "Note: the extracted ratings will be in `str` (text) format; convert them to `int` or `float` before storing them in the list\n",
+        "Note: the extracted ratings will be in `str` (text) format; convert them to `int` or `float` (one-by-one) before storing them in the list.\n",
         "\n",
         "Note: if you could not convert the ratings into numeric values, you can continue with string values and come back at the end of the project to see whether you can fix the problem. You can do the next part of this project without this type conversion."
       ]
