--- a/Automation_Project_Student_Version.ipynb
+++ b/Automation_Project_Student_Version.ipynb
@@ -6,7 +6,7 @@
       "name": "Automation Project - Student Version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMw2PxgoljWC+T9DqHX9NzE",
+      "authorship_tag": "ABX9TyN+1nD/foxMDJ58XEnWuPlf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "\n",
         "In this project, we want to learn how to automate the process of analyzing the user reviews on a specific webpage. If we were in charge of continuously monitoring some specific products of our competitors, this automation can save us a lot of time.\n",
         "\n",
-        "The target webpage is http://saffarizadeh.com/ET/reviews.html.\n",
+        "The target webpage is https://saffarizadeh.com/ET/reviews.html.\n",
         "\n",
         "Please open and view the webpage.\n",
         "\n",
