--- a/Automation_Project_Solution_Student_Version.ipynb
+++ b/Automation_Project_Solution_Student_Version.ipynb
@@ -6,7 +6,7 @@
       "name": "Automation Project Solution - Student Version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOqsqo0xnQ2XamfoL9DCyl",
+      "authorship_tag": "ABX9TyMMe9HvQ0G9OMis7nUmO1hP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "import pandas as pd\n",
         "from bs4 import BeautifulSoup"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
       "source": [
         "response = requests.get(\"https://saffarizadeh.com/ET/reviews.html\")"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
       "source": [
         "soup = BeautifulSoup(response.content, 'lxml')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
         "for title in soup.find_all(attrs={\"class\": \"reviewTitle\"}):\n",
         "  list1.append(title.text)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
         "for review in soup.find_all(attrs={\"class\": \"reviewBody\"}):\n",
         "  list2.append(review.text)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "# for rating in soup.find_all(attrs={\"class\": \"rating\"}):\n",
         "#   list3.append(int(rating.text[:1]))"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -247,9 +247,9 @@
         "id": "7LdLqxBKtk2a"
       },
       "source": [
-        "df = pd.DataFrame({\"title\": list1, \"review\": list2, \"rating\": list3})"
+        "df = pd.DataFrame({\"title\": list1, \"body\": list2, \"rating\": list3})"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -269,12 +269,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "c3303205-c690-4380-be13-d5daa1a921e5"
+        "outputId": "36b625a1-8083-449c-c2d0-e827d6683355"
       },
       "source": [
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +299,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>title</th>\n",
-              "      <th>review</th>\n",
+              "      <th>body</th>\n",
               "      <th>rating</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -385,7 +385,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -411,7 +411,7 @@
         "model.compile(optimizer='adam', loss=tf.keras.losses.BinaryCrossentropy(from_logits=True), metrics=['accuracy'])\n",
         "model.fit(train_data.shuffle(1).batch(512), epochs=10, verbose=1)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -440,9 +440,9 @@
         "id": "WlrntMp-tqvT"
       },
       "source": [
-        "sentiment = model(df[\"review\"]).numpy()"
+        "sentiment = model(df[\"body\"]).numpy()"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -462,7 +462,7 @@
       "source": [
         "df[\"sentiment\"] = sentiment"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -482,12 +482,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "e43d2ddd-db7d-4a60-f42d-c1edcc0bb4b1"
+        "outputId": "4917d6eb-8e4a-4c67-ccb9-1981b7ae8e9e"
       },
       "source": [
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +512,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>title</th>\n",
-              "      <th>review</th>\n",
+              "      <th>body</th>\n",
               "      <th>rating</th>\n",
               "      <th>sentiment</th>\n",
               "    </tr>\n",
@@ -523,70 +523,70 @@
               "      <td>Yeaaa USB C!!!!! But the dongle? Why? Why not ...</td>\n",
               "      <td>WHY Logitech! Why? Lets finally go FULL USB C ...</td>\n",
               "      <td>3</td>\n",
-              "      <td>0.041659</td>\n",
+              "      <td>0.069060</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Logitech - how many tries do you need to get i...</td>\n",
               "      <td>The scroll wheel is awesome. The fit and finis...</td>\n",
               "      <td>3</td>\n",
-              "      <td>0.395818</td>\n",
+              "      <td>0.643810</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Worthy Upgrade, Too Bad It’s Not In White</td>\n",
               "      <td>Purchased this product after accidentally purc...</td>\n",
               "      <td>4</td>\n",
-              "      <td>0.103402</td>\n",
+              "      <td>0.210050</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Terrible scroll wheel issues</td>\n",
               "      <td>I have the former MX Master 2S and upgraded to...</td>\n",
               "      <td>1</td>\n",
-              "      <td>0.260942</td>\n",
+              "      <td>0.203951</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>Logitech made a great mouse even better</td>\n",
               "      <td>The MX Master 2s was a fantastic mouse, but I ...</td>\n",
               "      <td>5</td>\n",
-              "      <td>0.999296</td>\n",
+              "      <td>0.997709</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>Unconfortable downgrade from the Performance MX 1</td>\n",
               "      <td>Cons in comparison to the original Performance...</td>\n",
               "      <td>2</td>\n",
-              "      <td>0.469742</td>\n",
+              "      <td>0.529043</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>Not for gamers</td>\n",
               "      <td>Many Youtubers recommend this mouse as their a...</td>\n",
               "      <td>3</td>\n",
-              "      <td>0.680990</td>\n",
+              "      <td>0.654304</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>More compatible with Mac than I expected</td>\n",
               "      <td>If you work with a Mac and are wondering if th...</td>\n",
               "      <td>5</td>\n",
-              "      <td>0.994160</td>\n",
+              "      <td>0.998463</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
               "      <td>Improvement over the last gen. Worth the upgrade</td>\n",
               "      <td>I have two of the previous generation and this...</td>\n",
               "      <td>5</td>\n",
-              "      <td>0.754552</td>\n",
+              "      <td>0.481931</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
               "      <td>The best scroll wheel ever.</td>\n",
               "      <td>The best Mx Master yet. And this time with rea...</td>\n",
               "      <td>5</td>\n",
-              "      <td>0.991673</td>\n",
+              "      <td>0.990936</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -594,22 +594,22 @@
             ],
             "text/plain": [
               "                                               title  ... sentiment\n",
-              "0  Yeaaa USB C!!!!! But the dongle? Why? Why not ...  ...  0.041659\n",
-              "1  Logitech - how many tries do you need to get i...  ...  0.395818\n",
-              "2          Worthy Upgrade, Too Bad It’s Not In White  ...  0.103402\n",
-              "3                       Terrible scroll wheel issues  ...  0.260942\n",
-              "4            Logitech made a great mouse even better  ...  0.999296\n",
-              "5  Unconfortable downgrade from the Performance MX 1  ...  0.469742\n",
-              "6                                     Not for gamers  ...  0.680990\n",
-              "7           More compatible with Mac than I expected  ...  0.994160\n",
-              "8   Improvement over the last gen. Worth the upgrade  ...  0.754552\n",
-              "9                        The best scroll wheel ever.  ...  0.991673\n",
+              "0  Yeaaa USB C!!!!! But the dongle? Why? Why not ...  ...  0.069060\n",
+              "1  Logitech - how many tries do you need to get i...  ...  0.643810\n",
+              "2          Worthy Upgrade, Too Bad It’s Not In White  ...  0.210050\n",
+              "3                       Terrible scroll wheel issues  ...  0.203951\n",
+              "4            Logitech made a great mouse even better  ...  0.997709\n",
+              "5  Unconfortable downgrade from the Performance MX 1  ...  0.529043\n",
+              "6                                     Not for gamers  ...  0.654304\n",
+              "7           More compatible with Mac than I expected  ...  0.998463\n",
+              "8   Improvement over the last gen. Worth the upgrade  ...  0.481931\n",
+              "9                        The best scroll wheel ever.  ...  0.990936\n",
               "\n",
               "[10 rows x 4 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 14
         }
       ]
     },
@@ -630,7 +630,7 @@
       "source": [
         "above_average = df[df[\"sentiment\"] > df[\"sentiment\"].mean()]"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -650,7 +650,7 @@
       "source": [
         "below_average = df[df[\"sentiment\"] < df[\"sentiment\"].mean()]"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -673,7 +673,7 @@
         "  above_average.to_excel(writer, sheet_name='above average', index=True)\n",
         "  below_average.to_excel(writer, sheet_name='below average', index=True)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -737,11 +737,11 @@
         "for rating in soup.find_all(attrs={\"class\": \"rating\"}):\n",
         "  list3.append(int(rating.get(\"rating\")))\n",
         "\n",
-        "df = pd.DataFrame({\"title\": list1, \"review\": list2, \"rating\": list3})\n",
+        "df = pd.DataFrame({\"title\": list1, \"body\": list2, \"rating\": list3})\n",
         "\n",
         "# Run the model cell\n",
         "\n",
-        "sentiment = model(df[\"review\"]).numpy()\n",
+        "sentiment = model(df[\"body\"]).numpy()\n",
         "df[\"sentiment\"] = sentiment\n",
         "\n",
         "above_average = df[df[\"sentiment\"] > df[\"sentiment\"].mean()]\n",
@@ -752,17 +752,6 @@
         "  df.to_excel(writer, sheet_name='main', index=True)\n",
         "  above_average.to_excel(writer, sheet_name='above average', index=True)\n",
         "  below_average.to_excel(writer, sheet_name='below average', index=True)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CLlKIxwv-mz4"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
